mobile responsive redesign

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
 <div itemscope itemtype="http://schema.org/NewsArticle" class="newsarticle">
     <h1 itemprop="headline" class="work-title">Most popular Django sites</h1>
-    <div id="django-logo"></div>
+    <img src="./images/django.jpg" alt="">
     <div itemprop="articleBody" class="articlebody">
 
 
@@ -111,6 +111,7 @@
 <p>So we started with 5 popular sites on Django that everyone knows and we had a proof that they are currently working on Django Framework.</p>
 <h3>Instagram.</h3>
 <div id="instagram-logo"></div>
+<img src="./images/instagram.jpg" alt="">
 <p>Yes, this source of selfies and food photos was developed in Django.
 Why? Instagram developers claim that choosing a technology, they were guided by three principles:</p>
 <ol>
@@ -133,6 +134,7 @@ Why? Instagram developers claim that choosing a technology, they were guided by 
 <p><a href="http://instagram-engineering.tumblr.com/post/13649370142/what-powers-instagram-hundreds-of-instances" title="http://instagram-engineering.tumblr.com/post/13649370142/what-powers-instagram-hundreds-of-instances">Read more</a> what Instagram developers share about their technologies.</p>
 <h3>The Washington Post.</h3>
 <div id="washington-logo"></div>
+<img src="./images/washington.jpg" alt="">
 <p>Few people know that initially Django was created to develop online editions. No wonder, the most popular newspapers have Django websites. Some of them benefit from certain advantages of Django, like The New York Times, which is mostly built on pure Python and basically uses lots of other technologies. Such newspapers as The Washington Post have their site with Django backend. This is how its developers explain their choice:</p>
 <ul>
 <li>sites on Django handle high traffic loads;</li>
@@ -142,6 +144,7 @@ Why? Instagram developers claim that choosing a technology, they were guided by 
 <p>It also has a lot of various apps on Django, like <a href="http://projects.washingtonpost.com/congress/" title="http://projects.washingtonpost.com/congress/">US Congress Votes Database</a> or <a href="http://apps.washingtonpost.com/national/fallen/" title="http://apps.washingtonpost.com/national/fallen/">Faces of the Fallen</a>, for instance.</p>
 <h3>Disqus</h3>
 <div id="disqus-logo"></div>
+<img src="./images/disqus-logo.jpg" alt="">
 <p>Disqus also faced the problem of scalability, like Pinterest, but it continued with Django and found <a href="http://blog.disqus.com/post/62187806135/scaling-django-to-8-billion-page-views" title="http://blog.disqus.com/post/62187806135/scaling-django-to-8-billion-page-views">another way out of this problem</a>. They’ve managed to achieve 8 billion page views in 2013. And even when they needed to handle 1.5 millions concurrently connected users, 45,000 new connections per second, they also <a href="http://highscalability.com/blog/2014/4/28/how-disqus-went-realtime-with-165k-messages-per-second-and-l.html" title="http://highscalability.com/blog/2014/4/28/how-disqus-went-realtime-with-165k-messages-per-second-and-l.html">did it with Django</a>.</p>
 <p>Again, they point out such benefits of Django:</p>
 <ul>
@@ -152,6 +155,7 @@ Why? Instagram developers claim that choosing a technology, they were guided by 
 <p>They’ve also managed to benefit from Django, providing different smaller side services and after they extended on “<a href="https://www.youtube.com/watch?v=vkCuRFM3GVE" title="https://www.youtube.com/watch?v=vkCuRFM3GVE">How they do it when it isn’t Django</a>”, which means how they used different technologies to make them get friends with Django. <a href="https://archive.org/details/EuroPython_2014_nbkwcdlH" title="https://archive.org/details/EuroPython_2014_nbkwcdlH">They moved back to Django</a>, mainly because of its wide community and yes, due to the fact that they’ve already worked with it.</p>
 <h3>Zapier</h3>
 <div id="zapier-logo"></div>
+<img src="./images/zapier-logo.jpg" alt="">
 <p>Now we’ll move from globally popular sites to rather popular ones in certain circles. For instance, Zapier gained its glory in the business world. This service helps to connect various similar services into one. For instance, one can save G-mail attachments to Dropbox or create a Trello ticket from his calendar. </p>
 <p>An interesting fact is that you can also validate that Zapier is running on Django by just opening their <a href="https://zapier.com/admin/" title="https://zapier.com/admin/">admin login page</a>. It shows a default Django interface for the admin panel.</p>
 <p>From the development perspective, it’s a really fascinating one:</p>
@@ -164,6 +168,7 @@ Why? Instagram developers claim that choosing a technology, they were guided by 
 <p>By the way, Zapier also turns to ReactJS and even prepared a small <a href="https://zapier.com/engineering/react-js-tutorial-guide-gotchas/" title="https://zapier.com/engineering/react-js-tutorial-guide-gotchas/">tutorial</a> for those who also consider it a good choice. So do we. </p>
 <h3>Bitbucket</h3>
 <div id="bitbucket-logo"></div>
+<img src="./images/bitbucket.jpg" alt="">
 <p>Bitbacket also doesn’t hide its roots, you can see Django admin panel on <a href="https://bitbucket.org/admin/" title="https://bitbucket.org/admin/">https://bitbucket.org/admin/</a></p>
 <p><a href="code.djangoproject.com/wiki/djangosuccessstorybitbucket" title="code.djangoproject.com/wiki/djangosuccessstorybitbucket">This article</a> shows its developer had fallen in love with Django much earlier than the development of Bitbucket started.
 However, this love continues till now. Which means it’s a true love and not the love of the kind “I was lazy to find something else, and you’re ok”.  Why is that so?</p>
